--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-basic",
+  "name": "streaming-storefront",
   "type": "module",
   "scripts": {
     "dev": "vinxi dev",
@@ -8,7 +8,6 @@
     "version": "vinxi version"
   },
   "dependencies": {
-    "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.1",
     "@solidjs/start": "^1.0.6",
     "date-fns": "3.6.0",
